deploy: bf7690e34ca59fff85a408b846b381bebff9d3a5

--- a/sphinx/setup.html
+++ b/sphinx/setup.html
@@ -132,7 +132,7 @@
 which generates lots of <code class="docutils literal notranslate"><span class="pre">tex</span></code> files in <code class="docutils literal notranslate"><span class="pre">./build/latex</span></code>.
 Switch to <code class="docutils literal notranslate"><span class="pre">build/latex</span></code> and run <code class="docutils literal notranslate"><span class="pre">make</span></code>. Assume that
 you have installed the software to compile <code class="docutils literal notranslate"><span class="pre">tex</span></code> files.
-If will generate <code class="docutils literal notranslate"><span class="pre">notes.pdf</span></code>.</p></li>
+It will generate <code class="docutils literal notranslate"><span class="pre">notes.pdf</span></code>.</p></li>
 </ol>
 </section>
 
