--- a/git/index.html
+++ b/git/index.html
@@ -19,7 +19,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Commands" href="commands.html" />
-    <link rel="prev" title="How to include code from a file" href="../sphinx/include-code.html" /> 
+    <link rel="prev" title="Link" href="../sphinx/link.html" /> 
 </head>
 
 <body class="wy-body-for-nav"> 
@@ -98,7 +98,7 @@
            </div>
           </div>
           <footer><div class="rst-footer-buttons" role="navigation" aria-label="Footer">
-        <a href="../sphinx/include-code.html" class="btn btn-neutral float-left" title="How to include code from a file" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
+        <a href="../sphinx/link.html" class="btn btn-neutral float-left" title="Link" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
         <a href="commands.html" class="btn btn-neutral float-right" title="Commands" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
     </div>
 
