--- a/python/index.html
+++ b/python/index.html
@@ -19,7 +19,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="asyncio" href="asyncio/index.html" />
-    <link rel="prev" title="Hello" href="../torch/torchscript/hello.html" /> 
+    <link rel="prev" title="Load in C++" href="../torch/torchscript/load-in-cpp.html" /> 
 </head>
 
 <body class="wy-body-for-nav"> 
@@ -100,7 +100,7 @@
            </div>
           </div>
           <footer><div class="rst-footer-buttons" role="navigation" aria-label="Footer">
-        <a href="../torch/torchscript/hello.html" class="btn btn-neutral float-left" title="Hello" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
+        <a href="../torch/torchscript/load-in-cpp.html" class="btn btn-neutral float-left" title="Load in C++" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
         <a href="asyncio/index.html" class="btn btn-neutral float-right" title="asyncio" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
     </div>
 
