--- a/python/socket/sockaddr_in.html
+++ b/python/socket/sockaddr_in.html
@@ -126,24 +126,24 @@
 <span class="linenos"> 6</span>
 <span class="linenos"> 7</span><span class="c1">// https://github.com/lattera/glibc/blob/master/bits/socket.h</span>
 <span class="linenos"> 8</span>
-<span class="linenos"> 9</span><span class="k">struct</span> <span class="nc">sockaddr</span><span class="w"> </span><span class="p">{</span><span class="w"></span>
+<span class="linenos"> 9</span><span class="k">struct</span><span class="w"> </span><span class="nc">sockaddr</span><span class="w"> </span><span class="p">{</span><span class="w"></span>
 <span class="linenos">10</span><span class="w">  </span><span class="n">__SOCKADDR_COMMON</span><span class="p">(</span><span class="n">sa_</span><span class="p">);</span><span class="w"> </span><span class="cm">/* Common data: address family and length.  */</span><span class="w"></span>
 <span class="linenos">11</span><span class="w">  </span><span class="kt">char</span><span class="w"> </span><span class="n">sa_data</span><span class="p">[</span><span class="mi">14</span><span class="p">];</span><span class="w">       </span><span class="cm">/* Address data.  */</span><span class="w"></span>
 <span class="linenos">12</span><span class="p">};</span><span class="w"></span>
 <span class="linenos">13</span>
 <span class="linenos">14</span><span class="c1">// https://github.com/lattera/glibc/blob/master/inet/netinet/in.h</span>
-<span class="linenos">15</span><span class="k">struct</span> <span class="nc">sockaddr_in</span><span class="w"> </span><span class="p">{</span><span class="w"></span>
+<span class="linenos">15</span><span class="k">struct</span><span class="w"> </span><span class="nc">sockaddr_in</span><span class="w"> </span><span class="p">{</span><span class="w"></span>
 <span class="linenos">16</span><span class="w">  </span><span class="n">__SOCKADDR_COMMON</span><span class="p">(</span><span class="n">sin_</span><span class="p">);</span><span class="w"></span>
 <span class="linenos">17</span><span class="w">  </span><span class="n">in_port_t</span><span class="w"> </span><span class="n">sin_port</span><span class="p">;</span><span class="w">      </span><span class="cm">/* Port number.  */</span><span class="w"></span>
-<span class="linenos">18</span><span class="w">  </span><span class="k">struct</span> <span class="nc">in_addr</span><span class="w"> </span><span class="n">sin_addr</span><span class="p">;</span><span class="w"> </span><span class="cm">/* Internet address.  */</span><span class="w"></span>
+<span class="linenos">18</span><span class="w">  </span><span class="k">struct</span><span class="w"> </span><span class="nc">in_addr</span><span class="w"> </span><span class="n">sin_addr</span><span class="p">;</span><span class="w"> </span><span class="cm">/* Internet address.  */</span><span class="w"></span>
 <span class="linenos">19</span>
 <span class="linenos">20</span><span class="w">  </span><span class="cm">/* Pad to size of `struct sockaddr&#39;.  */</span><span class="w"></span>
-<span class="linenos">21</span><span class="w">  </span><span class="kt">unsigned</span><span class="w"> </span><span class="kt">char</span><span class="w"> </span><span class="n">sin_zero</span><span class="p">[</span><span class="k">sizeof</span><span class="p">(</span><span class="k">struct</span> <span class="nc">sockaddr</span><span class="p">)</span><span class="w"> </span><span class="o">-</span><span class="w"> </span><span class="n">__SOCKADDR_COMMON_SIZE</span><span class="w"> </span><span class="o">-</span><span class="w"></span>
-<span class="linenos">22</span><span class="w">                         </span><span class="k">sizeof</span><span class="p">(</span><span class="n">in_port_t</span><span class="p">)</span><span class="w"> </span><span class="o">-</span><span class="w"> </span><span class="k">sizeof</span><span class="p">(</span><span class="k">struct</span> <span class="nc">in_addr</span><span class="p">)];</span><span class="w"></span>
+<span class="linenos">21</span><span class="w">  </span><span class="kt">unsigned</span><span class="w"> </span><span class="kt">char</span><span class="w"> </span><span class="n">sin_zero</span><span class="p">[</span><span class="k">sizeof</span><span class="p">(</span><span class="k">struct</span><span class="w"> </span><span class="nc">sockaddr</span><span class="p">)</span><span class="w"> </span><span class="o">-</span><span class="w"> </span><span class="n">__SOCKADDR_COMMON_SIZE</span><span class="w"> </span><span class="o">-</span><span class="w"></span>
+<span class="linenos">22</span><span class="w">                         </span><span class="k">sizeof</span><span class="p">(</span><span class="n">in_port_t</span><span class="p">)</span><span class="w"> </span><span class="o">-</span><span class="w"> </span><span class="k">sizeof</span><span class="p">(</span><span class="k">struct</span><span class="w"> </span><span class="nc">in_addr</span><span class="p">)];</span><span class="w"></span>
 <span class="linenos">23</span><span class="p">};</span><span class="w"></span>
 <span class="linenos">24</span>
 <span class="linenos">25</span><span class="k">typedef</span><span class="w"> </span><span class="kt">uint32_t</span><span class="w"> </span><span class="n">in_addr_t</span><span class="p">;</span><span class="w"></span>
-<span class="linenos">26</span><span class="k">struct</span> <span class="nc">in_addr</span><span class="w"> </span><span class="p">{</span><span class="w"></span>
+<span class="linenos">26</span><span class="k">struct</span><span class="w"> </span><span class="nc">in_addr</span><span class="w"> </span><span class="p">{</span><span class="w"></span>
 <span class="linenos">27</span><span class="w">  </span><span class="n">in_addr_t</span><span class="w"> </span><span class="n">s_addr</span><span class="p">;</span><span class="w"></span>
 <span class="linenos">28</span><span class="p">};</span><span class="w"></span>
 <span class="linenos">29</span>
