--- a/cuda/index.html
+++ b/cuda/index.html
@@ -19,7 +19,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Installation" href="install.html" />
-    <link rel="prev" title="echo" href="../bash/echo.html" /> 
+    <link rel="prev" title="ffmeg" href="../bash/ffmpeg.html" /> 
 </head>
 
 <body class="wy-body-for-nav"> 
@@ -109,7 +109,7 @@
            </div>
           </div>
           <footer><div class="rst-footer-buttons" role="navigation" aria-label="Footer">
-        <a href="../bash/echo.html" class="btn btn-neutral float-left" title="echo" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
+        <a href="../bash/ffmpeg.html" class="btn btn-neutral float-left" title="ffmeg" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
         <a href="install.html" class="btn btn-neutral float-right" title="Installation" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
     </div>
 
