--- a/torch/quantization/hello.html
+++ b/torch/quantization/hello.html
@@ -142,18 +142,20 @@
 <span class="linenos">28</span>
 <span class="linenos">29</span>    <span class="k">assert</span> <span class="n">model_int8</span><span class="o">.</span><span class="n">fc</span><span class="o">.</span><span class="n">bias</span><span class="p">()</span><span class="o">.</span><span class="n">is_quantized</span> <span class="ow">is</span> <span class="kc">False</span>
 <span class="linenos">30</span>    <span class="k">assert</span> <span class="n">model_int8</span><span class="o">.</span><span class="n">fc</span><span class="o">.</span><span class="n">bias</span><span class="p">()</span><span class="o">.</span><span class="n">dtype</span> <span class="o">==</span> <span class="n">torch</span><span class="o">.</span><span class="n">float32</span>
-<span class="linenos">31</span>
-<span class="linenos">32</span>    <span class="n">x</span> <span class="o">=</span> <span class="n">torch</span><span class="o">.</span><span class="n">tensor</span><span class="p">([[</span><span class="mf">1.0</span><span class="p">]],</span> <span class="n">dtype</span><span class="o">=</span><span class="n">torch</span><span class="o">.</span><span class="n">float32</span><span class="p">)</span>
-<span class="linenos">33</span>    <span class="n">y</span> <span class="o">=</span> <span class="n">m</span><span class="p">(</span><span class="n">x</span><span class="p">)</span>
-<span class="linenos">34</span>    <span class="nb">print</span><span class="p">(</span><span class="n">x</span><span class="p">,</span> <span class="n">y</span><span class="p">)</span>  <span class="c1"># tensor([[1.]]) tensor([[-1.2900]], grad_fn=&lt;AddmmBackward0&gt;)</span>
-<span class="linenos">35</span>
-<span class="linenos">36</span>    <span class="n">qy</span> <span class="o">=</span> <span class="n">model_int8</span><span class="p">(</span><span class="n">x</span><span class="p">)</span>
-<span class="linenos">37</span>    <span class="nb">print</span><span class="p">(</span><span class="n">qy</span><span class="p">)</span>  <span class="c1"># tensor([[-1.2931]])</span>
-<span class="linenos">38</span>
-<span class="linenos">39</span>
-<span class="linenos">40</span><span class="k">if</span> <span class="vm">__name__</span> <span class="o">==</span> <span class="s2">&quot;__main__&quot;</span><span class="p">:</span>
-<span class="linenos">41</span>    <span class="n">torch</span><span class="o">.</span><span class="n">manual_seed</span><span class="p">(</span><span class="mi">20220723</span><span class="p">)</span>
-<span class="linenos">42</span>    <span class="n">main</span><span class="p">()</span>
+<span class="linenos">31</span>    <span class="k">assert</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">model_int8</span><span class="o">.</span><span class="n">fc</span><span class="p">,</span> <span class="n">torch</span><span class="o">.</span><span class="n">nn</span><span class="o">.</span><span class="n">quantized</span><span class="o">.</span><span class="n">dynamic</span><span class="o">.</span><span class="n">Linear</span><span class="p">)</span>
+<span class="linenos">32</span>    <span class="nb">print</span><span class="p">(</span><span class="nb">type</span><span class="p">(</span><span class="n">model_int8</span><span class="o">.</span><span class="n">fc</span><span class="p">))</span>
+<span class="linenos">33</span>
+<span class="linenos">34</span>    <span class="n">x</span> <span class="o">=</span> <span class="n">torch</span><span class="o">.</span><span class="n">tensor</span><span class="p">([[</span><span class="mf">1.0</span><span class="p">]],</span> <span class="n">dtype</span><span class="o">=</span><span class="n">torch</span><span class="o">.</span><span class="n">float32</span><span class="p">)</span>
+<span class="linenos">35</span>    <span class="n">y</span> <span class="o">=</span> <span class="n">m</span><span class="p">(</span><span class="n">x</span><span class="p">)</span>
+<span class="linenos">36</span>    <span class="nb">print</span><span class="p">(</span><span class="n">x</span><span class="p">,</span> <span class="n">y</span><span class="p">)</span>  <span class="c1"># tensor([[1.]]) tensor([[-1.2900]], grad_fn=&lt;AddmmBackward0&gt;)</span>
+<span class="linenos">37</span>
+<span class="linenos">38</span>    <span class="n">qy</span> <span class="o">=</span> <span class="n">model_int8</span><span class="p">(</span><span class="n">x</span><span class="p">)</span>
+<span class="linenos">39</span>    <span class="nb">print</span><span class="p">(</span><span class="n">qy</span><span class="p">)</span>  <span class="c1"># tensor([[-1.2931]])</span>
+<span class="linenos">40</span>
+<span class="linenos">41</span>
+<span class="linenos">42</span><span class="k">if</span> <span class="vm">__name__</span> <span class="o">==</span> <span class="s2">&quot;__main__&quot;</span><span class="p">:</span>
+<span class="linenos">43</span>    <span class="n">torch</span><span class="o">.</span><span class="n">manual_seed</span><span class="p">(</span><span class="mi">20220723</span><span class="p">)</span>
+<span class="linenos">44</span>    <span class="n">main</span><span class="p">()</span>
 </pre></div>
 </div>
 </div>
