deploy: 4c7ff32de12f7d6e52320197af437589346f24a5

--- a/torch/logical-op.html
+++ b/torch/logical-op.html
@@ -19,7 +19,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Note" href="notes.html" />
-    <link rel="prev" title="ivalue" href="torchscript/ivalue.html" /> 
+    <link rel="prev" title="type" href="torchscript/type.html" /> 
 </head>
 
 <body class="wy-body-for-nav"> 
@@ -132,7 +132,7 @@
            </div>
           </div>
           <footer><div class="rst-footer-buttons" role="navigation" aria-label="Footer">
-        <a href="torchscript/ivalue.html" class="btn btn-neutral float-left" title="ivalue" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
+        <a href="torchscript/type.html" class="btn btn-neutral float-left" title="type" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
         <a href="notes.html" class="btn btn-neutral float-right" title="Note" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
     </div>
 
