deploy: 6dff83f991b8322108789ff96376dca12a083614

--- a/android/basics.html
+++ b/android/basics.html
@@ -19,7 +19,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Installation" href="install.html" />
-    <link rel="prev" title="Hello jni" href="kotlin/hello-jni.html" /> 
+    <link rel="prev" title="Binding kaldi-native-fbank for kotlin" href="kotlin/feat-extractor-jni.html" /> 
 </head>
 
 <body class="wy-body-for-nav"> 
@@ -125,7 +125,7 @@
            </div>
           </div>
           <footer><div class="rst-footer-buttons" role="navigation" aria-label="Footer">
-        <a href="kotlin/hello-jni.html" class="btn btn-neutral float-left" title="Hello jni" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
+        <a href="kotlin/feat-extractor-jni.html" class="btn btn-neutral float-left" title="Binding kaldi-native-fbank for kotlin" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
         <a href="install.html" class="btn btn-neutral float-right" title="Installation" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
     </div>
 
