--- a/bash/ffmpeg.html
+++ b/bash/ffmpeg.html
@@ -150,6 +150,8 @@ ffmpeg<span class="w"> </span>-i<span class="w"> </span>input.opus<span class="w
 ffmpeg<span class="w"> </span>-i<span class="w"> </span>input.opus<span class="w"> </span>-ss<span class="w"> </span><span class="m">60</span><span class="w"> </span>-t<span class="w"> </span><span class="m">30</span><span class="w"> </span>output.wav
 <span class="c1"># or use HH:MM:SS format</span>
 ffmpeg<span class="w"> </span>-i<span class="w"> </span>input.opus<span class="w"> </span>-ss<span class="w"> </span><span class="m">0</span>:01:00<span class="w"> </span>-t<span class="w"> </span><span class="m">0</span>:00:30<span class="w"> </span>output.wav
+
+ffmpeg<span class="w"> </span>-ss<span class="w"> </span><span class="m">00</span>:00:16<span class="w"> </span>-to<span class="w"> </span><span class="m">00</span>:00:30<span class="w"> </span>-i<span class="w"> </span>./abc.mov<span class="w"> </span>-c<span class="w"> </span>copy<span class="w"> </span>part.mp4
 </pre></div>
 </div>
 </section>
