--- a/qemu/index.html
+++ b/qemu/index.html
@@ -19,7 +19,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Install" href="install.html" />
-    <link rel="prev" title="adb" href="../android/adb.html" /> 
+    <link rel="prev" title="Samples" href="../android/samples.html" /> 
 </head>
 
 <body class="wy-body-for-nav"> 
@@ -137,7 +137,7 @@
            </div>
           </div>
           <footer><div class="rst-footer-buttons" role="navigation" aria-label="Footer">
-        <a href="../android/adb.html" class="btn btn-neutral float-left" title="adb" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
+        <a href="../android/samples.html" class="btn btn-neutral float-left" title="Samples" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
         <a href="install.html" class="btn btn-neutral float-right" title="Install" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
     </div>
 
