--- a/ssh/index.html
+++ b/ssh/index.html
@@ -19,7 +19,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Basics" href="basics.html" />
-    <link rel="prev" title="star visionfive 2" href="../embedded_systems/visionfive.html" /> 
+    <link rel="prev" title="Lichee Pi 4A" href="../embedded_systems/licheepi4a.html" /> 
 </head>
 
 <body class="wy-body-for-nav"> 
@@ -138,7 +138,7 @@
            </div>
           </div>
           <footer><div class="rst-footer-buttons" role="navigation" aria-label="Footer">
-        <a href="../embedded_systems/visionfive.html" class="btn btn-neutral float-left" title="star visionfive 2" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
+        <a href="../embedded_systems/licheepi4a.html" class="btn btn-neutral float-left" title="Lichee Pi 4A" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
         <a href="basics.html" class="btn btn-neutral float-right" title="Basics" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
     </div>
 
