--- a/sphinx/index.html
+++ b/sphinx/index.html
@@ -23,7 +23,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Setup" href="setup.html" />
-    <link rel="prev" title="chrono" href="../cpp/chrono.html" /> 
+    <link rel="prev" title="iomanip" href="../cpp/iomanip.html" /> 
 </head>
 
 <body class="wy-body-for-nav"> 
@@ -152,7 +152,7 @@
            </div>
           </div>
           <footer><div class="rst-footer-buttons" role="navigation" aria-label="Footer">
-        <a href="../cpp/chrono.html" class="btn btn-neutral float-left" title="chrono" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
+        <a href="../cpp/iomanip.html" class="btn btn-neutral float-left" title="iomanip" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
         <a href="setup.html" class="btn btn-neutral float-right" title="Setup" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
     </div>
 
